perf(optimizations): document behavior-neutral opts as SourbyCraft defaults
Lock the already-on, pure-efficiency Luminol optimizations as intentional
SourbyCraft defaults with a // SourbyCraft: justification (same pattern as
F3-5's goal-selector throttle), so an upstream sync can't silently revert
them. No value change — all three were already true; this documents WHY
they are behavior-neutral:

- reduce_sensor_work: reuses per-entity LOS cache; same targets detected
- lithium_sleeping_block_entity: no-op-tick skip, identical observable result
- use_simd: vectorized math with identical numeric results, self-detects

Left OFF (documented in report, NOT behavior-neutral / not universal):
AsyncProtocolChange (ViaVersion/plugin packet-seq risk), OptimizedDragonRespawn
(edge-case algorithm divergence), CpuAffinity (hardware-specific), and
GaleVariableEntityWakeup (alters wakeup timing — kept at upstream default,
not claimed neutral). KaiijuEntityLimiter -> load-gated (next commit).

Claude-Session: https://claude.ai/code/session_01BnZNijro2QyAvtD2pfRbM2